@@ -161,7 +161,7 @@ final class PerfCountingSecurityManager extends SecurityManager implements Calla
             try {
                 ClassLoader l = Thread.currentThread().getContextClassLoader();
                 Class<?> manClass = Class.forName("org.netbeans.TopSecurityManager", false, l);
-                man = (SecurityManager) manClass.newInstance();
+                man = (SecurityManager) manClass.getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 throw new IllegalStateException(ex);
             }
